# Fluid-Simulation-hackED-2025

./: Cargo.toml  README.md  index.html  index.js  util.js  webgpu.js
fluid-macroquad/: .gitignore  Cargo.toml
fluid-macroquad/src/: main.rs
lib-fluid/: Cargo.toml
lib-fluid/src/: lib.rs  var.rs
shaders/: circle.wgsl  square.wgsl
src/: lib.rs  main.rs  testsim.rs
