[package]
name = "Fluid-Simulation-hackED-2025"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
console_error_panic_hook = "0.1.7"
lib-fluid = {path = "lib-fluid"}
[profile.release]
debug = true